--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 authors = ["Jonas Westlund <jonve547@student.liu.se>"]
 
 [dependencies]
-clippy = "*"
+clippy = {version = "*", optional = true}
 env_logger = "0.4.3"
 error-chain = "*"
 log = "0.3.8"
 nom = "^3.0"
+
+[features]
+default = []
