--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Jonas Westlund <jonve547@student.liu.se>"]
 
 [dependencies]
 clippy = {version = "*", optional = true}
-env_logger = "0.4.3"
+pretty_env_logger = "0.1.1"
 error-chain = "*"
 log = "0.3.8"
 nom = "^3.0"
