--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,17 @@
 [package]
+authors = ["Jonas Westlund <jonve547@student.liu.se>"]
 name = "gentlemen"
 version = "0.1.0"
-authors = ["Jonas Westlund <jonve547@student.liu.se>"]
-
 [dependencies]
-clippy = {version = "*", optional = true}
-pretty_env_logger = "0.1.1"
-error-chain = "*"
+failure = "0.1.0"
 log = "0.3.8"
 nom = "^3.0"
+nom_locate = "0.1.1"
+pretty_env_logger = "0.1.1"
+
+[dependencies.clippy]
+optional = true
+version = "*"
 
 [features]
 default = []
