--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,4 @@ failure = "0.1.0"
 log = "0.3.8"
 pretty_env_logger = "0.1.1"
 failure_derive = "0.1.1"
-
-[dependencies.clippy]
-optional = true
-version = "*"
-
-[features]
-default = []
+itertools = "0.7.8"
