--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ name = "photon"
 version = "0.1.0"
 [dependencies]
 failure = "0.1.0"
-log = "0.3.8"
-pretty_env_logger = "0.1.1"
 failure_derive = "0.1.1"
 itertools = "0.7.8"
+log = "0.3.8"
+pretty_env_logger = "0.1.1"
+termcolor = "0.3.6"
