Moved to Rust 2018. Fixed typecheck error reporting

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
+cargo-features = ["edition"]
 [package]
 authors = ["Jonas Westlund <jonaswestlund101@gmail.com>"]
 name = "blixt"
 version = "0.1.0"
+edition = "2018"
 [dependencies]
 failure = "0.1.0"
 failure_derive = "0.1.1"
