--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,3 @@
-cargo-features = ["edition"]
 [package]
 authors = ["Jonas Westlund <jonaswestlund101@gmail.com>"]
 name = "blixt"
@@ -7,7 +6,9 @@ edition = "2018"
 [dependencies]
 failure = "0.1.0"
 failure_derive = "0.1.1"
-itertools = "0.7.8"
 log = "0.3.8"
 pretty_env_logger = "0.1.1"
 termcolor = "0.3.6"
+clap = "2.32.0"
+typed-arena = "1.4.1"
+fxhash = "0.2.1"
