--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2018"
 [dependencies]
 failure = "0.1.0"
 failure_derive = "0.1.1"
-log = "0.3.8"
-pretty_env_logger = "0.1.1"
+log = "0.4.6"
 termcolor = "0.3.6"
 clap = "2.32.0"
-typed-arena = "1.4.1"
-fxhash = "0.2.1"
+copy_arena = "0.1.1"
+env_logger = "0.6.0"
+hashbrown = "0.1.8"
